www/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: www
    tier: backend
  name: www
spec:
  replicas: 1
  selector:
    matchLabels:
      app: www
      tier: backend
  strategy: {}
  template:
    metadata:
      labels:
        app: wwww
        tier: backend
    spec:
      containers:
      - image: alpine:latest
        name: www
        resources: {}
        volumeMounts:
        - name: content
          mountPath: /var/www/html/www
          readOnly: true
      volumes:
      - name: content
        persistentVolumeClaim:
          claimName: www-pvc
status: {}
