www/service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: www
    tier: backend
  name: www-svc
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: www
    tier: backend
status:
  loadBalancer: {}
